syntax = "proto3";

package proto;

option go_package = "github.com/platform-mesh/kubernetes-graphql-gateway/listener/pkg/schemahandler/proto";

service SchemaHandler {
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse);
}

message SubscribeRequest {}

message SubscribeResponse {
  string cluster_name = 1;
  string schema = 2;
  enum EventType {
    ADDED = 0;
    REMOVED = 1;
  }
  EventType event_type = 3;
}
